--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,8 @@
     ],
     "routes": [
       { "src": "/(.*)", "dest": "/main.py" }
+    ],
+   "rewrites": [
+    { "source": "/(.*)", "destination": "/main" }
     ]
   }
